3g upgrade modal, fixed column alignment on recent customers

--- a/angular-src/src/app/components/customercaredashboardinfo/customercaredashboardinfo.component.css
+++ b/angular-src/src/app/components/customercaredashboardinfo/customercaredashboardinfo.component.css
@@ -29,3 +29,7 @@
 .ratingValueBg3 {
     background-color: #40D835;
 }
+.underlineDashed {
+    text-decoration: underline;
+    text-decoration-style:dashed;
+}
